@startuml
skinparam classAttributeIconSize 0
hide empty members

package "modulo1.minha-loja" {
  class Cliente {
    - id: number
    - nome: string
    - email: string
    - pedidos: Pedido[]
    + Cliente(id: number, nome: string, email: string, pedidos: Pedido[] = [])
    + getId(): number
    + getNome(): string
    + getEmail(): string
    + setEmail(novoEmail: string): void
    + mostrarPedidos(): void
    + mostrarPedido(pedidoId: number): void
    + adicionarPedido(pedido: Pedido): void
    + valorGasto(): number
  }

  class Pedido {
    - id: number
    - data: Date
    - _status: string = "pendente"
    - itens: ItemPedido[]
    + Pedido(id: number, data: Date, _status: string = "pendente", itens: ItemPedido[] = [])
    + getId(): number
    + valorTotal(): number
    + adicionarItem(item: ItemPedido): void
    + getItens(): ItemPedido[]
    + getStatus(): string
    + pagar(): void
    + enviar(): void
    + entregar(): void
    + imprimirPedido(): void
  }

  class ItemPedido {
    - id: number
    - produto: Produto
    - quantidade: number
    + ItemPedido(id: number, produto: Produto, quantidade: number)
    + getId(): number
    + getProduto(): Produto
    + getQuantidade(): number
    - adicionarProduto(novoProduto: Produto, novaQuantidade: number): void
    + removerQuantidade(quantidade: number): void
  }

  class Produto {
    - id: number
    - nome: string
    - preco: number = 1
    + Produto(id: number, nome: string, preco: number = 1)
    + getId(): number
    + getNome(): string
    + getPreco(): number
    + setPreco(novoPreco: number): void
  }
}

Cliente "1" *-- "0..*" Pedido : pedidos
Pedido "1" *-- "0..*" ItemPedido : itens
ItemPedido "1" --> "1" Produto : produto

@enduml